--- a/src/components/entities/Entity.module.css
+++ b/src/components/entities/Entity.module.css
@@ -1,10 +1,10 @@
 .Entity {
     display: grid;
     grid-template-areas:
-        "a b"
-        "a c"
+        "a b b"
+        "a c d"
     ;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto 1fr 1fr;
     grid-column-gap: 8px;
     grid-template-rows: auto 1fr;
 
@@ -24,4 +24,8 @@
 
 .Contents {
     grid-area: c;
+}
+
+.Fields {
+    grid-area: d;
 }
