--- a/src/components/entities/EntitySong.module.css
+++ b/src/components/entities/EntitySong.module.css
@@ -1,14 +1,28 @@
-.Song {
+.EntitySong {
 
 }
 
 .Description {
-    margin-top: 4px;
     margin-bottom: 4px;
+    max-height: 3em;
+    overflow-y: hidden;
 }
 
 .Lyrics {
     font-style: italic;
     margin-top: 4px;
-    margin-bottom: 4px;
+    max-height: 3em;
+    overflow-y: hidden;
+}
+
+.Involvement {
+
+}
+
+.Album {
+
+}
+
+.Genres {
+
 }
