--- a/src/components/LoginNav.module.css
+++ b/src/components/LoginNav.module.css
@@ -1,17 +1,18 @@
 .LoginNav {
     display: flex;
-    padding: 4px;
+    padding: 4px 16px;
     color: #5F860A;
     border-top: 2px solid #ff8500;
     position: sticky;
     bottom: 0;
     justify-content: space-between;
     align-items: center;
-    height: 44px;
+    height: 64px;
     background-color: white;
 }
 
 .VerticalCenter {
     display: flex;
     flex-direction: column;
+    font-size: x-large;
 }
