--- a/src/components/entities/Entity.module.css
+++ b/src/components/entities/Entity.module.css
@@ -1,13 +1,12 @@
 .Entity {
     display: grid;
-    grid-template-areas:
-        "a b b"
-        "a c d"
-    ;
     grid-template-columns: auto 1fr 1fr;
-    grid-column-gap: 8px;
     grid-template-rows: auto 1fr;
-
+    grid-column-gap: 8px;
+    grid-template-areas:
+            "a b b"
+            "a c d"
+    ;
     margin-top: 16px;
     margin-bottom: 16px;
 }
@@ -24,6 +23,8 @@
 
 .Contents {
     grid-area: c;
+    margin-top: 4px;
+    margin-bottom: 4px;
 }
 
 .Fields {
