--- a/src/components/inputs/Input.module.css
+++ b/src/components/inputs/Input.module.css
@@ -8,10 +8,12 @@
     border: 2px solid #ff8500;
     background-color: white;
     color: #5F860A;
+
+    font-size: large;
 }
 
 .Input:hover {
-    background-color: rgba(95, 134, 10, 0.2);
+    background-color: rgba(255,133,0, 0.2);
 }
 
 .Input:focus {
