--- a/src/components/inputs/Select.module.css
+++ b/src/components/inputs/Select.module.css
@@ -13,7 +13,7 @@
 }
 
 .Select:hover {
-    background-color: rgba(255,133,0, 0.2);
+    background-color: rgba(255, 133, 0, 0.2);
 }
 
 .Select:focus {
@@ -24,7 +24,7 @@
 }
 
 .Select:active {
-    background-color: rgba(255,133,0, 0.5);
+    background-color: rgba(255, 133, 0, 0.5);
 }
 
 .Select[disabled] {
