--- a/src/components/Field.module.css
+++ b/src/components/Field.module.css
@@ -2,6 +2,7 @@
     display: flex;
     padding: 6px 0;
     border-bottom: 1px dotted rgba(255, 133, 0, 0.3);
+    align-items: flex-start;
 }
 
 .Title {
