--- a/src/components/buttons/ToggleButton.module.css
+++ b/src/components/buttons/ToggleButton.module.css
@@ -7,11 +7,11 @@
 }
 
 .True:hover {
-    background-color: rgba(255,133,0, 0.7);
+    background-color: rgba(255, 133, 0, 0.7);
 }
 
 .True:active {
-    background-color: rgba(255,133,0, 0.9);
+    background-color: rgba(255, 133, 0, 0.9);
 }
 
 .False {
