--- a/src/components/inputs/Input.module.css
+++ b/src/components/inputs/Input.module.css
@@ -13,7 +13,7 @@
 }
 
 .Input:hover {
-    background-color: rgba(255,133,0, 0.2);
+    background-color: rgba(255, 133, 0, 0.2);
 }
 
 .Input:focus {
