--- a/src/components/layouts/ResultsLayout.module.css
+++ b/src/components/layouts/ResultsLayout.module.css
@@ -1,7 +1,7 @@
 .layout {
     display: grid;
     grid-template-columns: 180px auto;
-    grid-template-rows: 44px auto;
+    grid-template-rows: auto 1fr;
     grid-column-gap: 24px;
     grid-row-gap: 24px;
 
